fix: comprehensive bug fixes, security hardening, and layer separation
Test suite was red (9/65 failing) despite docs claiming all-green; now 69/69
pass. Highlights:

Correctness
- Fix size double-counting on every cached/snapshot-restored/live-preview
  tree (FileNode.addChild always accumulated size, even when reconstructing
  an already-sized tree); added FileNode.attachChild/copyOf for that case.
- FileScanner: per-scan Session instead of shared instance fields, fixing a
  real data race between concurrent/sequential scans on one instance.
- Never follow symlinks into directories (previously Files.isDirectory()
  silently followed them); detect and stop directory cycles via fileKey().
- Windows-safe path handling in FileAnalysis/SnapshotManager (was joining
  paths with a hardcoded "/").
- Streaming CSV/JSON/HTML export with proper escaping (was one big String
  in memory, unescaped quotes/HTML entities).
- formatSize no longer locale-dependent (was producing "1,0 GB" under
  non-US locales) - centralized in core.util.SizeFormat.
- Tree view now shows files, not just directories; live-scan merge and
  "reveal in tree" match by path instead of by name/reference.
- Rings chart: hit-testing and drawing used two different angle
  conventions (bug), and rings were drawn as solid pies from center,
  hiding ancestor rings - now a proper annulus with one convention.

Security
- New DeletionService: moves to OS trash by default (opt-out), reports
  per-path success/failure instead of swallowing IOException everywhere.
- Removed destructive cleanup-target defaults (Installer, Prefetch,
  Recycle Bin, whole /var/log, whole /tmp); implemented the filters that
  were declared in JSON but silently ignored (contentsOnly, daysOld,
  extension); high-risk targets need extra confirmation.
- customCommand always shown and confirmed before running.
- Elevation helper scripts moved out of the shared temp dir into
  ~/.filescanner/run with random per-run names.
- Wildcard cleanup pat